<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <fragment
            android:id="@+id/einstellungenfrag"
            class="com.example.synchro.EinstellungenFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <Button
        android:id="@+id/lichtsyncBut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/lichtsynchronisation" />

    <Button
        android:id="@+id/audiosyncBut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/akustische_synchronisation" />

    <Button
        android:id="@+id/getsettingsAkustikBut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/empfange_einstellungen_via_akustik" />

    <Button
        android:id="@+id/getsettingsLightBut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/empfange_einstellungen_via_licht" />
</LinearLayout>